feat(wishlist-dao): implement WishlistDAO for retrieving and checking customer wishlist